update docs for local dev